Use 'uname -m' command for arch selection

--- a/src/Makefile
+++ b/src/Makefile
@@ -36,7 +36,7 @@ CFLAGS = -Wall -g2
 SHAREDLIB_CFLAGS = -fPIC
 #VZKERNEL_HEADERS ?= /lib/modules/$(shell uname -r)/build/include
 INC = -I ../include
-ARCH=$(shell uname -i)
+ARCH ?= $(shell uname -m)
 
 OBJ_libvzctl = lib/env.lo lib/ub.lo lib/net.lo lib/logger.lo lib/exec.lo \
 	lib/cap.lo lib/cpu.lo lib/res.lo lib/util.lo lib/dist.lo lib/list.lo \
