Removed distribution-specific stuff from 'make install' (bug #254)
The problem is vzctl's make install installs /etc/init.d/vz and
/etc/sysconfig/network-scripts/*venet0.

/etc/init.d/vz is RedHat/SUSE specific and does not make sense on, say, Gentoo.
So this needs to be removed from make install (and added to
make install-redhat).

/etc/sysconfig/network-scripts/*venet0 is RedHat-specific as well. Same
applies.

http://bugzilla.openvz.org/254

--- a/src/Makefile
+++ b/src/Makefile
@@ -218,7 +218,10 @@ inst-dirs:
 	$(INSTALL) -m 644 ../etc/logrotate.d/vzctl $(DESTDIR)$(LOGRDIR)/vzctl
 
 install: $(PROGS) inst-dirs install-lib inst-sbin inst-scripts \
-	inst-netscripts inst-configs inst-initd inst-cron inst-udev
+	inst-configs inst-cron inst-udev
+
+install-redhat: inst-netscripts inst-initd
+
 clean:
 	rm -f *.o lib/*.lo $(PROGS) $(LIB_vzctl) $(LIB_fs) $(LIB_fs) .depend
 
@@ -231,6 +234,5 @@ include .depend
 
 
 .PHONY: clean depend install inst-dirs inst-config check-version \
-	inst-initd install-cron all default inst-config inst-lib inst-vzdir
-
-
+	inst-initd install-cron all default inst-config inst-lib inst-vzdir \
+	install-redhat
