Added ipv6 support Limitations: * 2.6.16 kernel * only Redhat like distribution suported To enable ipv6 set: * IPV6=yes in /etc/vz/vz.conf * echo 1 > /proc/sys/net/ipv6/conf/all/forwarding

--- a/etc/vz.conf
+++ b/etc/vz.conf
@@ -28,6 +28,7 @@ DEF_OSTEMPLATE="fedora-core-4"
 
 ## Load vzwdog module
 VZWDOG="no"
+IPV6="no"
 
 IPTABLES="ipt_REJECT ipt_tos ipt_limit ipt_multiport iptable_filter iptable_mangle ipt_TCPMSS ipt_tcpmss ipt_ttl ipt_length"
 
