Really fixed install-gentoo Makefile target
We do not need $(DESTDIR) in link destination, otherwise we might end up
linking to temporary installroot location not the final location.

--- a/src/Makefile
+++ b/src/Makefile
@@ -230,7 +230,7 @@ install-gentoo:
 	# Gentoo-specific configuration directory
 	$(INSTALL) -d $(DESTDIR)/etc/conf.d
 	# /etc/conf.d/vz is used by vz initscript
-	ln -s $(DESTDIR)/$(CONFDIR)/vz.conf $(DESTDIR)/etc/conf.d/vz
+	ln -s $(CONFDIR)/vz.conf $(DESTDIR)/etc/conf.d/vz
 
 clean:
 	rm -f *.o lib/*.lo $(PROGS) $(LIB_vzctl) $(LIB_fs) $(LIB_fs) .depend
