Fix soname for libvzctl.
The libvzctl.so.0.0.2 in /usr/lib/vzctl is missing a SO-name. On Gentoo,
portage is enforcing packages to only install so's with a SO-name being
present.

http://bugzilla.openvz.org/306

--- a/src/Makefile
+++ b/src/Makefile
@@ -110,14 +110,14 @@ check-version:
 	$(CC) -c $(CFLAGS) $(SHAREDLIB_CFLAGS) $(INC) $< -o $@
 
 $(LIB_fs) : $(OBJ_simfs) lib/logger.lo 
-	$(CC) $(CFLAGS) $(INC) $(LDFLAGS) $^ -shared -o $@
+	$(CC) $(CFLAGS) $(INC) $(LDFLAGS) -shared --Wl,-soname,$@ -o $@ $^
 
 libvzctl.a: $(OBJ_libvzctl) $(OBJ_simfs)
 	ar scq $@ $+
 	ranlib $@
 
 $(LIB_vzctl) : $(OBJ_simfs) $(OBJ_libvzctl)
-	$(CC) $(CFLAGS) $(INC) $(LDFLAGS) $^ $(LD_FLAGS) -shared -o $@
+	$(CC) $(CFLAGS) $(INC) $(LDFLAGS) $^ $(LD_FLAGS) -shared -Wl,-soname,$@ -o $@
 
 vzctl-static: $(OBJ_vzctl) libvzctl.a
 	$(CC) $(CFLAGS) $(INC) $(LDFLAGS) $^ -rdynamic -ldl -lutil -o $@
