--- a/etc/ifup-venet.in
+++ b/etc/ifup-venet.in
@@ -16,9 +16,13 @@
 #  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 
-test -f /etc/vz/vz.conf || exit 1
-test -f /usr/lib/vzctl/scripts/vps-functions || exit 1
+VZCONF=@PKGCONFDIR@/vz.conf
+test -f ${VZCONF} || exit 1
+test -f @PKGLIBDIR@/scripts/vps-functions || exit 1
 test -f /etc/init.d/functions && . /etc/init.d/functions
+
+# configure VZNET
+modvenet="vznetdev vznet"
 
 ## SuSE distro
 if [ -f /etc/sysconfig/network/scripts/functions ]; then
@@ -31,6 +35,42 @@ else
 	fi
 	vznet=$DEVICE
 fi
+. @PKGLIBDIR@/scripts/vps-functions
+. ${VZCONF}
 
-echo "Shutting down interface $vznet: " 
-ip link set $vznet down
+veinfo="/proc/vz/veinfo"
+
+# configure interface
+
+for mod in ${modvenet}; do
+	modprobe ${mod} 2>/dev/null
+done
+
+if [ ! -r $veinfo ]; then
+	echo "can't find venet kernel module" >&2
+	exit 1
+fi
+
+ip link set $vznet up
+
+echo "Bringing up interface $vznet: " 
+ip addr add 0.0.0.0/0 dev $vznet
+
+echo "Configuring interface $vznet: " 
+sysctl -w net.ipv4.conf.$vznet.send_redirects=0
+
+if [ "${IPV6}" = "yes" ]; then
+	echo "Configuring ipv6 $vznet: "
+	# Fix me: ip addres should be generated
+	ip -6 addr add fe80::1/128 dev $vznet
+fi
+
+if [ -r $veinfo ]; then
+	vzgetnetdev
+
+	for veip in `awk '($1 > 0) { for(i=4;i<=NF;i++) { print $i; } }' < $veinfo`; do
+		vzarp add $veip
+		vzaddrouting $veip
+	done
+fi
+
