--- a/etc/vps-net_del.in
+++ b/etc/vps-net_del.in
@@ -1,3 +1,4 @@
+#!/bin/bash
 #  Copyright (C) 2000-2006 SWsoft. All rights reserved.
 #
 #  This program is free software; you can redistribute it and/or modify
@@ -14,8 +15,32 @@
 #  along with this program; if not, write to the Free Software
 #  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
-# Clean VEs network rules (arp,route,iptables)
 #
+# This script removes routing for given VE.
+#
+# Parameters are passed in environment variables.
+# Required parameters:
+#   IP_ADDR       - IPs to delete, several addresses should be divided by space
+#   VEID          - VE id
+# Optional parameters:
+#   VE_STATE      - state of VE; could be one of:
+#                     starting | stopping | running | stopped
 
-*/5 * * * * root /usr/share/vzctl/scripts/vpsnetclean
+. @PKGLIBDIR@/scripts/vps-functions
 
+vzcheckvar IP_ADDR VEID
+
+vzgetnetdev
+
+for IP in $IP_ADDR; do
+	vzdelrouting $IP
+	vzarp del $IP
+	# Update ip address information
+	if [ "${VE_STATE}" = "running" -a -f "${VE_STATE_DIR}/${VEID}" ]; then
+		cat ${VE_STATE_DIR}/${VEID} | tr ' ' '\n' | \
+		grep -w -v "${IP}" | tr '\n' ' ' > ${VE_STATE_DIR}/${VEID}
+	fi		
+done
+
+exit 0
+# end of script
