--- a/etc/vpsreboot.in
+++ b/etc/vpsreboot.in
@@ -19,8 +19,8 @@
 # Script to start VE was rebooted
 #
 
-VZCONF=/etc/vz/vz.conf
-CONF_DIR=/etc/vz/conf
+VZCONF=@PKGCONFDIR@/vz.conf
+CONF_DIR=@PKGCONFDIR@/conf
 VESTAT=/proc/vz/vestat
 REBOOT_MARK='reboot'
 LOCKFILE='/var/lock/vereboot.lock'
@@ -47,7 +47,7 @@ function check_reboot()
 	fi
 	if [ -f "${ve_root}/${REBOOT_MARK}" ]; then
 		[ -z "${LOGFILE}" ] || echo "`date --iso-8601=seconds`  vereboot : VE ${veid} : reboot " >> ${LOGFILE}
-		/usr/sbin/vzctl start ${veid} >/dev/null 2>&1
+		@SBINDIR@/vzctl start ${veid} >/dev/null 2>&1
 	fi
 }
 
