--- a/etc/bash_completion.d/vzctl.sh.in
+++ b/etc/bash_completion.d/vzctl.sh.in
@@ -8,23 +8,23 @@ _get_ves()
 	case $cmd in
 		create)
 			# create a new VEID, by increasing the last one
-			local veids=`@SBINDIR@/vzlist -H -a -ovpsid | tail -1`
+			local veids=`@SBINDIR@/vzlist -H -a -oveid | tail -1`
 			[ -n "$veids" ] || veids=100
 			echo $((veids+1))
 			;;
 		start|mount|umount|destroy)
 			# stopped VEs
-			@SBINDIR@/vzlist -H -S -ovpsid
+			@SBINDIR@/vzlist -H -S -oveid
 			@SBINDIR@/vzlist -H -S -oname | sed s/-//g
 			;;
 		stop|enter|exec*)
 			# running VEs
-			@SBINDIR@/vzlist -H -ovpsid
+			@SBINDIR@/vzlist -H -oveid
 			@SBINDIR@/vzlist -H -oname | sed s/-//g
 			;;
 		*)
 			# All VEs
-			@SBINDIR@/vzlist -H -a -ovpsid
+			@SBINDIR@/vzlist -H -a -oveid
 			@SBINDIR@/vzlist -H -a -oname | sed s/-//g
 			;;
 	esac
