etc/Makefile.am: do not need to use builddir
As I get it make is always in builddir, so no need to specify it explicitly.
More to say, when you run ./configure in $top_srcdir, $builddir is not set
and thus construction like '$(INSTALL_DATA) $(builddir)/$$file' tries to get
the file from /, not from the current directory, which does not work.

--- a/etc/Makefile.am
+++ b/etc/Makefile.am
@@ -100,13 +100,13 @@ install-data-local:
 install-bashcomp: $(BASHCSCRIPTS)
 	$(mkinstalldirs) $(DESTDIR)$(bashcdir)
 	for file in $(BASHCSCRIPTS); do \
-		$(INSTALL_DATA) $(builddir)/$$file $(DESTDIR)$(bashcdir)/$$file; \
+		$(INSTALL_DATA) $$file $(DESTDIR)$(bashcdir)/$$file; \
 	done
 
 install-cron: $(CRONSCRIPTS)
 	$(mkinstalldirs) $(DESTDIR)$(cronddir)
 	for file in $(CRONSCRIPTS); do \
-		$(INSTALL_SCRIPT) $(builddir)/$$file $(DESTDIR)$(cronddir)/$$file; \
+		$(INSTALL_SCRIPT) $$file $(DESTDIR)$(cronddir)/$$file; \
 	done
 
 install-logrotate:
@@ -126,7 +126,7 @@ install-redhat: init.d/vz $(NETSCRIPTS)
 	$(mkinstalldirs) $(DESTDIR)$(sysconfdir)/sysconfig/network-scripts
 	$(INSTALL_SCRIPT) init.d/vz  $(DESTDIR)$(initddir)/vz
 	for file in $(NETSCRIPTS); do \
-		$(INSTALL_SCRIPT) $(builddir)/$$file \
+		$(INSTALL_SCRIPT) $$file \
 			$(DESTDIR)$(sysconfdir)/sysconfig/network-scripts/$$file; \
 	done
 
