--- a/pathsubst.am
+++ b/pathsubst.am
@@ -1,4 +1,4 @@
-#  Copyright (C) 2000-2006 SWsoft. All rights reserved.
+#  Copyright (C) 2006 SWsoft. All rights reserved.
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -15,11 +15,13 @@
 #  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 
-sbin_SCRIPTS = vzcpucheck \
-               vzmigrate \
-               vznetcfg \
-               vzpid
+pathsubst_RULES = \
+	s!@'SBINDIR'@!$(sbindir)!g; \
+	s!@'PKGCONFDIR'@!$(pkgconfdir)!g; \
+	s!@'PKGDATADIR'@!$(pkgdatadir)!g; \
+	s!@'PKGLIBDIR'@!$(pkglibdir)!g;
 
-EXTRA_DIST=$(sbin_SCRIPTS:%=%.in)
+pathsubst = sed -e '$(pathsubst_RULES)'
 
-include $(top_srcdir)/pathsubst.am
+%: %.in
+	$(pathsubst) $(srcdir)/$< > $@
