Moved init.d scripts installation logic into a separate Makefile

--- a/configure.ac
+++ b/configure.ac
@@ -79,6 +79,7 @@ AC_CONFIG_COMMANDS_PRE([SUMMARY="$PACKAGE_STRING configured successfully:
 AC_CONFIG_FILES([bin/Makefile
                  etc/dists/Makefile
                  etc/conf/Makefile
+                 etc/init.d/Makefile
                  etc/Makefile
                  man/Makefile
                  src/lib/Makefile
